--- a/public/v1/pages/widgets.html
+++ b/public/v1/pages/widgets.html
@@ -256,8 +256,8 @@
                 <img src="../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                 <p>
-                  Alexander Pierce - Web Developer
-                  <small>Member since Nov. 2012</small>
+                  Roy Cho - Full Stack Developer
+                  <small>Member since Nov. 2018</small>
                 </p>
               </li>
               <!-- Menu Body -->
