--- a/public/v1/pages/index-header12.html
+++ b/public/v1/pages/index-header12.html
@@ -216,7 +216,7 @@
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <img src="../dist/img/roy.png" class="user-image" alt="User Image">
-              <span class="hidden-xs">Alexander Pierce</span>
+              <span class="hidden-xs">Roy Cho</span>
             </a>
             <ul class="dropdown-menu">
               <!-- User image -->
