--- a/public/v1/pages/index-sidebar12.html
+++ b/public/v1/pages/index-sidebar12.html
@@ -54,6 +54,21 @@
             <li><a href=""><i class="fa fa-circle-o"></i>Ethereum (ETH)</a></li>
           </ul>
         </li>
+        <li class="treeview">
+          <a href="#">
+            <i class="fa fa-files-o"></i>
+            <span>Messanger</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+
+          </a>
+          <ul class="treeview-menu">
+            <li><a href="./App12ships.html"><i class="fa fa-circle-o"></i>ALL</a></li>
+            <li><a href=""><i class="fa fa-circle-o"></i>GROUP</a></li>
+            <li><a href=""><i class="fa fa-circle-o"></i>1:1</a></li>
+          </ul>
+        </li>
 
       </ul>
     </section>
