--- a/public/v1/pages/app.html
+++ b/public/v1/pages/app.html
@@ -81,7 +81,7 @@
     <!-- AdminLTE for demo purposes -->
     <script src="../dist/js/demo.js"></script>
     <script src="../bower_components/angular/angular.js"></script>
-    <script src="App12ships.js"></script>
+    <script src="app.js"></script>
     <script src="index-header.js"></script>
     <script src="index-sidebar.js"></script>
     <script src="index-main-content.js"></script>
