--- a/public/v1/app/index.html
+++ b/public/v1/app/index.html
@@ -80,8 +80,9 @@
     <script src="../dist/js/adminlte.min.js"></script>
     <!-- AdminLTE for demo purposes -->
     <script src="../dist/js/demo.js"></script>
-    <script src="../bower_components/angular/angular.js"></script>
-    <script src="app.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>    
+
+    <script src="index.js"></script>
     <script src="index-header.js"></script>
     <script src="index-sidebar.js"></script>
     <script src="index-main-content.js"></script>
