--- a/public/v1/app/index.html
+++ b/public/v1/app/index.html
@@ -30,11 +30,11 @@
 
 <body class="hold-transition skin-blue sidebar-mini" ng-controller="Ctrl12ships">
     <div class="wrapper">
-        <index-header12></index-header12>
+        <index-header12/>
         <div>
             <!-- Left side column. contains the logo and sidebar 
   -->
-            <index-sidebar12></index-sidebar12>
+            <index-sidebar/>
         </div>
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
@@ -61,7 +61,7 @@
             <strong>Copyright &copy; 2018-2019 <a href="http://12ships.com">D4Labs</a>.</strong> All rights
             reserved.
         </footer>
-        <index-right-sidebar-home-tab />
+        <index-sidebar-right />
         <!--
           <div ng-include="'index-right-sidebar-home-tab.html'">
           </div>
@@ -85,9 +85,8 @@
     <script src="index.js"></script>
     <script src="index-header.js"></script>
     <script src="index-sidebar.js"></script>
+    <script src="index-sidebar-right.js"></script>
     <script src="index-main-content.js"></script>
-    <script src="index-right-sidebar12.js"></script>
-    <script src="index-right-sidebar-home-tab.js"></script>
 </body>
 <script>
 </script>
