--- a/public/v1/app/index-sidebar.html
+++ b/public/v1/app/index-sidebar.html
@@ -1,5 +1,5 @@
 
-  <aside class="main-sidebar">
+  <aside class="main-sidebar" >
     
     <!-- sidebar: style can be found in sidebar.less -->
     <section class="sidebar">
@@ -27,6 +27,8 @@
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu" data-widget="tree">
         <li class="header">MAIN NAVIGATION</li>
+        <li><a ng-click="$ctrl.loadPage('index-user-info')"><i class="fa fa-circle-o"></i>User Info</a></li>
+        <li><a ng-click="$ctrl.loadPage('index-main-chat')"><i class="fa fa-circle-o"></i>Chatting</a></li>
         <li class="treeview">
           <a href="#">
             <i class="fa fa-dashboard"></i> <span>Notice</span>
@@ -52,21 +54,6 @@
             <li><a href=""><i class="fa fa-circle-o"></i>12Ships Coin (12C)</a></li>
             <li><a href=""><i class="fa fa-circle-o"></i>BitCoin (BTC)</a></li>
             <li><a href=""><i class="fa fa-circle-o"></i>Ethereum (ETH)</a></li>
-          </ul>
-        </li>
-        <li class="treeview">
-          <a href="#">
-            <i class="fa fa-files-o"></i>
-            <span>Messanger</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-
-          </a>
-          <ul class="treeview-menu">
-            <li><a href="./App12ships.html"><i class="fa fa-circle-o"></i>ALL</a></li>
-            <li><a href=""><i class="fa fa-circle-o"></i>GROUP</a></li>
-            <li><a href=""><i class="fa fa-circle-o"></i>1:1</a></li>
           </ul>
         </li>
 
