--- a/public/v1/app/index-main-chat.html
+++ b/public/v1/app/index-main-chat.html
@@ -1,55 +1,53 @@
 <!-- Direct Chat -->
-    <!-- DIRECT CHAT PRIMARY -->
-    <div class="box box-primary direct-chat direct-chat-primary">
-        <div class="box-header with-border">
-            <h3 class="box-title">Direct Chat</h3>
-            <div class="box-tools pull-right">
-                <span data-toggle="tooltip" title="3 New Messages" class="badge bg-light-blue">3</span>
-                <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
-                </button>
-                <button type="button" class="btn btn-box-tool" data-toggle="tooltip" title="Contacts" data-widget="chat-pane-toggle">
-                    <i class="fa fa-comments"></i></button>
+<!-- DIRECT CHAT PRIMARY -->
+<div class="box box-primary direct-chat direct-chat-primary">
+    <div class="box-header with-border">
+        <h3 class="box-title">Direct Chat</h3>
+        <div class="box-tools pull-right">
+            <span data-toggle="tooltip" title="3 New Messages" class="badge bg-light-blue">3</span>
+            <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+            </button>
+            <button type="button" class="btn btn-box-tool" data-toggle="tooltip" title="Contacts" data-widget="chat-pane-toggle">
+                <i class="fa fa-comments"></i></button>
+        </div>
+    </div>
+    <!-- /.box-header -->
+    <div class="box-body">
+        <!-- Conversations are loaded here -->
+        <div class="direct-chat-messages">
+            <div ng-repeat="chat in $ctrl.chatList">
+                <div class="direct-chat-msg" ng-if='$ctrl.g_G.isMe(chat.uid)==true'>
+                    <div class="direct-chat-info clearfix">
+                        <span class="direct-chat-name pull-left">{{chat.nic}}</span>
+                        <span class="direct-chat-timestamp pull-right">{{chat.time}}</span>
+                    </div>
+                    <!-- /.direct-chat-info -->
+                    <img class="direct-chat-img" src="{{chat.image}}" alt="Message User Image"><!-- /.direct-chat-img -->
+                    <div class="direct-chat-text">
+                        {{chat.msg}}
+                    </div>
+                    <!-- /.direct-chat-text -->
+                </div>
+                <div class="direct-chat-msg right" ng-if='$ctrl.g_G.isMe(chat.uid)==false'>
+                    <div class="direct-chat-info clearfix">
+                        <span class="direct-chat-name pull-right">{{chat.nic}}</span>
+                        <span class="direct-chat-timestamp pull-left">{{chat.time}}</span>
+                    </div>
+                    <!-- /.direct-chat-info -->
+                    <img class="direct-chat-img" src="{{chat.image}}" alt="Message User Image"><!-- /.direct-chat-img -->
+                    <div class="direct-chat-text">
+                        {{chat.msg}}
+                    </div>
+                    <!-- /.direct-chat-text -->
+                </div>
             </div>
         </div>
-        <!-- /.box-header -->
-        <div class="box-body">
-            <!-- Conversations are loaded here -->
-            <div class="direct-chat-messages">
-                <!-- Message. Default to the left -->
-                <div class="direct-chat-msg">
-                    <div class="direct-chat-info clearfix">
-                        <span class="direct-chat-name pull-left">Roy Cho</span>
-                        <span class="direct-chat-timestamp pull-right">23 Jan 2:00 pm</span>
-                    </div>
-                    <!-- /.direct-chat-info -->
-                    <img class="direct-chat-img" src="../dist/img/roy.png" alt="Message User Image"><!-- /.direct-chat-img -->
-                    <div class="direct-chat-text">
-                        I'm free today. It's unbelievable!
-                    </div>
-                    <!-- /.direct-chat-text -->
-                </div>
-                <!-- /.direct-chat-msg -->
-                <!-- Message to the right -->
-                <div class="direct-chat-msg right">
-                    <div class="direct-chat-info clearfix">
-                        <span class="direct-chat-name pull-right">Sarah Bullock</span>
-                        <span class="direct-chat-timestamp pull-left">23 Jan 2:05 pm</span>
-                    </div>
-                    <!-- /.direct-chat-info -->
-                    <img class="direct-chat-img" src="../dist/img/user3-128x128.jpg" alt="Message User Image"><!-- /.direct-chat-img -->
-                    <div class="direct-chat-text">
-                        You better believe it!
-                    </div>
-                    <!-- /.direct-chat-text -->
-                </div>
-                <!-- /.direct-chat-msg -->
-            </div>
-            <!--/.direct-chat-messages-->
-            <!-- Contacts are loaded here -->
-            <div class="direct-chat-contacts">
-                <ul class="contacts-list">
-                    <li>
-                        <a href="#">
+        <!--/.direct-chat-messages-->
+        <!-- Contacts are loaded here -->
+        <div class="direct-chat-contacts">
+            <ul class="contacts-list">
+                <li>
+                    <a href="#">
                   <img class="contacts-list-img" src="../dist/img/user1-128x128.jpg" alt="User Image">
 
                   <div class="contacts-list-info">
@@ -61,24 +59,24 @@
                   </div>
                   <!-- /.contacts-list-info -->
                 </a>
-                    </li>
-                    <!-- End Contact Item -->
-                </ul>
-                <!-- /.contatcts-list -->
-            </div>
-            <!-- /.direct-chat-pane -->
+                </li>
+                <!-- End Contact Item -->
+            </ul>
+            <!-- /.contatcts-list -->
         </div>
-        <!-- /.box-body -->
-        <div class="box-footer">
-            <form action="#" method="post">
-                <div class="input-group">
-                    <input type="text" name="message" placeholder="Type Message ..." class="form-control">
-                    <span class="input-group-btn">
+        <!-- /.direct-chat-pane -->
+    </div>
+    <!-- /.box-body -->
+    <div class="box-footer">
+        <form action="#" method="post">
+            <div class="input-group">
+                <input type="text" name="message" placeholder="Type Message ..." class="form-control">
+                <span class="input-group-btn">
                     <button type="submit" class="btn btn-primary btn-flat">Send</button>
                   </span>
-                </div>
-            </form>
-        </div>
-        <!-- /.box-footer-->
+            </div>
+        </form>
     </div>
-    <!--/.direct-chat -->
+    <!-- /.box-footer-->
+</div>
+<!--/.direct-chat -->
