--- a/public/v1/app/window/window-register.html
+++ b/public/v1/app/window/window-register.html
@@ -1,11 +1,8 @@
 
 <div class="register-box">
-  <div class="register-logo">
-    <a href="../../index2.html"><b>Admin</b>LTE</a>
-  </div>
 
   <div class="register-box-body">
-    <p class="login-box-msg">Register a new membership</p>
+    <p class="login-box-msg">Register a new 12ships member</p>
 
     <form action="../../index.html" method="post">
       <div class="form-group has-feedback">
