--- a/public/v1/app/index-header.html
+++ b/public/v1/app/index-header.html
@@ -1,37 +1,28 @@
-  <header class="main-header">
-    <!-- Logo -->
-    <a href="" class="logo">
-      <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>L</b>ive</span>
-      <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>Live</b>12Ships</span>
-    </a>
-
-    <!-- Header Navbar: style can be found in header.less -->
-    <nav class="navbar navbar-static-top" ng-if='g_G.isLogin'>
-      <!-- Sidebar toggle button-->
-      <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
+<!-- Header Navbar: style can be found in header.less -->
+<nav class="navbar navbar-static-top">
+    <!-- Sidebar toggle button-->
+    <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-
-      <div class="navbar-custom-menu">
+    <div class="navbar-custom-menu">
         <ul class="nav navbar-nav">
-          <!-- Messages: style can be found in dropdown.less-->
-          <li ng-if="0"  class="dropdown messages-menu">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <!-- Messages: style can be found in dropdown.less-->
+            <li ng-if="0" class="dropdown messages-menu">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <i class="fa fa-envelope-o"></i>
               <span class="label label-success">4</span>
             </a>
-            <ul class="dropdown-menu">
-              <li class="header">You have 4 messages</li>
-              <li>
-                <!-- inner menu: contains the actual data -->
-                <ul class="menu">
-                  <li><!-- start message -->
-                    <a href="#">
+                <ul class="dropdown-menu">
+                    <li class="header">You have 4 messages</li>
+                    <li>
+                        <!-- inner menu: contains the actual data -->
+                        <ul class="menu">
+                            <li>
+                                <!-- start message -->
+                                <a href="#">
                       <div class="pull-left">
                         <img src="../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                       </div>
@@ -41,10 +32,10 @@
                       </h4>
                       <p>Why not buy a new awesome theme?</p>
                     </a>
-                  </li>
-                  <!-- end message -->
-                  <li>
-                    <a href="#">
+                            </li>
+                            <!-- end message -->
+                            <li>
+                                <a href="#">
                       <div class="pull-left">
                         <img src="../dist/img/user3-128x128.jpg" class="img-circle" alt="User Image">
                       </div>
@@ -54,9 +45,9 @@
                       </h4>
                       <p>Why not buy a new awesome theme?</p>
                     </a>
-                  </li>
-                  <li>
-                    <a href="#">
+                            </li>
+                            <li>
+                                <a href="#">
                       <div class="pull-left">
                         <img src="../dist/img/user4-128x128.jpg" class="img-circle" alt="User Image">
                       </div>
@@ -66,9 +57,9 @@
                       </h4>
                       <p>Why not buy a new awesome theme?</p>
                     </a>
-                  </li>
-                  <li>
-                    <a href="#">
+                            </li>
+                            <li>
+                                <a href="#">
                       <div class="pull-left">
                         <img src="../dist/img/user3-128x128.jpg" class="img-circle" alt="User Image">
                       </div>
@@ -78,9 +69,9 @@
                       </h4>
                       <p>Why not buy a new awesome theme?</p>
                     </a>
-                  </li>
-                  <li>
-                    <a href="#">
+                            </li>
+                            <li>
+                                <a href="#">
                       <div class="pull-left">
                         <img src="../dist/img/user4-128x128.jpg" class="img-circle" alt="User Image">
                       </div>
@@ -90,67 +81,68 @@
                       </h4>
                       <p>Why not buy a new awesome theme?</p>
                     </a>
-                  </li>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="footer"><a href="#">See All Messages</a></li>
                 </ul>
-              </li>
-              <li class="footer"><a href="#">See All Messages</a></li>
-            </ul>
-          </li>
-          <!-- Notifications: style can be found in dropdown.less -->
-          <li class="dropdown notifications-menu">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            </li>
+            <!-- Notifications: style can be found in dropdown.less -->
+            <li class="dropdown notifications-menu">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <i class="fa fa-bell-o"></i>
               <span class="label label-warning">10</span>
             </a>
-            <ul class="dropdown-menu">
-              <li class="header">You have 10 notifications</li>
-              <li>
-                <!-- inner menu: contains the actual data -->
-                <ul class="menu">
-                  <li>
-                    <a href="#">
+                <ul class="dropdown-menu">
+                    <li class="header">You have 10 notifications</li>
+                    <li>
+                        <!-- inner menu: contains the actual data -->
+                        <ul class="menu">
+                            <li>
+                                <a href="#">
                       <i class="fa fa-users text-aqua"></i> 5 new members joined today
                     </a>
-                  </li>
-                  <li>
-                    <a href="#">
+                            </li>
+                            <li>
+                                <a href="#">
                       <i class="fa fa-warning text-yellow"></i> Very long description here that may not fit into the
                       page and may cause design problems
                     </a>
-                  </li>
-                  <li>
-                    <a href="#">
+                            </li>
+                            <li>
+                                <a href="#">
                       <i class="fa fa-users text-red"></i> 5 new members joined
                     </a>
-                  </li>
-                  <li>
-                    <a href="#">
+                            </li>
+                            <li>
+                                <a href="#">
                       <i class="fa fa-shopping-cart text-green"></i> 25 sales made
                     </a>
-                  </li>
-                  <li>
-                    <a href="#">
+                            </li>
+                            <li>
+                                <a href="#">
                       <i class="fa fa-user text-light-blue"></i> You changed your username
                     </a>
-                  </li>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="footer"><a href="#">View all</a></li>
                 </ul>
-              </li>
-              <li class="footer"><a href="#">View all</a></li>
-            </ul>
-          </li>
-          <!-- Tasks: style can be found in dropdown.less -->
-          <li ng-if="0" class="dropdown tasks-menu">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            </li>
+            <!-- Tasks: style can be found in dropdown.less -->
+            <li ng-if="0" class="dropdown tasks-menu">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <i class="fa fa-flag-o"></i>
               <span class="label label-danger">9</span>
             </a>
-            <ul class="dropdown-menu">
-              <li class="header">You have 9 tasks</li>
-              <li>
-                <!-- inner menu: contains the actual data -->
-                <ul class="menu">
-                  <li><!-- Task item -->
-                    <a href="#">
+                <ul class="dropdown-menu">
+                    <li class="header">You have 9 tasks</li>
+                    <li>
+                        <!-- inner menu: contains the actual data -->
+                        <ul class="menu">
+                            <li>
+                                <!-- Task item -->
+                                <a href="#">
                       <h3>
                         Design some buttons
                         <small class="pull-right">20%</small>
@@ -161,10 +153,11 @@
                         </div>
                       </div>
                     </a>
-                  </li>
-                  <!-- end task item -->
-                  <li><!-- Task item -->
-                    <a href="#">
+                            </li>
+                            <!-- end task item -->
+                            <li>
+                                <!-- Task item -->
+                                <a href="#">
                       <h3>
                         Create a nice theme
                         <small class="pull-right">40%</small>
@@ -175,10 +168,11 @@
                         </div>
                       </div>
                     </a>
-                  </li>
-                  <!-- end task item -->
-                  <li><!-- Task item -->
-                    <a href="#">
+                            </li>
+                            <!-- end task item -->
+                            <li>
+                                <!-- Task item -->
+                                <a href="#">
                       <h3>
                         Some task I need to do
                         <small class="pull-right">60%</small>
@@ -189,10 +183,11 @@
                         </div>
                       </div>
                     </a>
-                  </li>
-                  <!-- end task item -->
-                  <li><!-- Task item -->
-                    <a href="#">
+                            </li>
+                            <!-- end task item -->
+                            <li>
+                                <!-- Task item -->
+                                <a href="#">
                       <h3>
                         Make beautiful transitions
                         <small class="pull-right">80%</small>
@@ -203,62 +198,60 @@
                         </div>
                       </div>
                     </a>
-                  </li>
-                  <!-- end task item -->
+                            </li>
+                            <!-- end task item -->
+                        </ul>
+                    </li>
+                    <li class="footer">
+                        <a href="#">View all tasks</a>
+                    </li>
                 </ul>
-              </li>
-              <li class="footer">
-                <a href="#">View all tasks</a>
-              </li>
-            </ul>
-          </li>
-          <!-- User Account: style can be found in dropdown.less -->
-          <li class="dropdown user user-menu">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            </li>
+            <!-- User Account: style can be found in dropdown.less -->
+            <li class="dropdown user user-menu">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <img src="../dist/img/roy.png" class="user-image" alt="User Image">
               <span class="hidden-xs">Roy Cho</span>
             </a>
-            <ul class="dropdown-menu">
-              <!-- User image -->
-              <li class="user-header">
-                <img src="../dist/img/roy.png" class="img-circle" alt="User Image">
-
-                <p>
-                  Roy Cho - Fullstack Developer (header)
-                  <small>Member since Nov. 2018</small>
-                </p>
-              </li>
-              <!-- Menu Body -->
-              <li class="user-body">
-                <div class="row">
-                  <div class="col-xs-4 text-center">
-                    <a href="#">Followers</a>
-                  </div>
-                  <div class="col-xs-4 text-center">
-                    <a href="#">Sales</a>
-                  </div>
-                  <div class="col-xs-4 text-center">
-                    <a href="#">Friends</a>
-                  </div>
-                </div>
-                <!-- /.row -->
-              </li>
-              <!-- Menu Footer-->
-              <li class="user-footer">
-                <div class="pull-left">
-                  <a href="#" class="btn btn-default btn-flat">Profile</a>
-                </div>
-                <div class="pull-right">
-                  <a href="#" class="btn btn-default btn-flat">Sign out</a>
-                </div>
-              </li>
-            </ul>
-          </li>
-          <!-- Control Sidebar Toggle Button -->
-          <li>
-            <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
-          </li>
+                <ul class="dropdown-menu">
+                    <!-- User image -->
+                    <li class="user-header">
+                        <img src="../dist/img/roy.png" class="img-circle" alt="User Image">
+                        <p>
+                            Roy Cho - Fullstack Developer (header)
+                            <small>Member since Nov. 2018</small>
+                        </p>
+                    </li>
+                    <!-- Menu Body -->
+                    <li class="user-body">
+                        <div class="row">
+                            <div class="col-xs-4 text-center">
+                                <a href="#">Followers</a>
+                            </div>
+                            <div class="col-xs-4 text-center">
+                                <a href="#">Sales</a>
+                            </div>
+                            <div class="col-xs-4 text-center">
+                                <a href="#">Friends</a>
+                            </div>
+                        </div>
+                        <!-- /.row -->
+                    </li>
+                    <!-- Menu Footer-->
+                    <li class="user-footer">
+                        <div class="pull-left">
+                            <a href="#" class="btn btn-default btn-flat">Profile</a>
+                        </div>
+                        <div class="pull-right">
+                            <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                        </div>
+                    </li>
+                </ul>
+            </li>
+            <!-- Control Sidebar Toggle Button -->
+            <li>
+                <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
+            </li>
         </ul>
-      </div>
-    </nav>
-  </header>
+    </div>
+</nav>
