--- a/public/v1/app/window/window-login.html
+++ b/public/v1/app/window/window-login.html
@@ -38,8 +38,8 @@
         Google+</a>
     </div>
 -->
-    <a ng-click="$ctrl.showPage('window-reset-passwd')">I forgot my password</a><br>
-    <a ng-click="$ctrl.showPage('window-register')" class="text-center">Register a new membership</a>
+    <a ng-click="$ctrl.g_G.routeGoto('/reset_passwd')">I forgot my password</a><br>
+    <a ng-click="$ctrl.g_G.routeGoto('/regist')" class="text-center">Register a new membership</a>
 
   </div>
 </div>
