--- a/public/v1/app/window/window-reset-passwd.html
+++ b/public/v1/app/window/window-reset-passwd.html
@@ -33,8 +33,8 @@
 -->
   <p/>
         <div class="row">
-            <a ng-click="$ctrl.showPage('window-login')">I already have a membership</a><br>
-            <a ng-click="$ctrl.showPage('window-register')" class="text-center">Register a new membership</a>
+            <a ng-click="$ctrl.g_G.routeGoto('/login')">I already have a membership</a><br>
+            <a ng-click="$ctrl.g_G.routeGoto('/register')" class="text-center">Register a new membership</a>
         </div>
     </div>
 </div>
