--- a/public/v1/app/window/window-register.html
+++ b/public/v1/app/window/window-register.html
@@ -4,21 +4,21 @@
   <div class="register-box-body">
     <p class="login-box-msg">Register a new 12ships member</p>
 
-    <form action="../../index.html" method="post">
+    <form >
       <div class="form-group has-feedback">
-        <input type="text" class="form-control" placeholder="Full name">
+        <input type="text" class="form-control" placeholder="Nick name" ng-model='$ctrl.rq.nic'>
         <span class="glyphicon glyphicon-user form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
-        <input type="email" class="form-control" placeholder="Email">
+        <input type="email" class="form-control" placeholder="Email" ng-model='$ctrl.rq.email'>
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
-        <input type="password" class="form-control" placeholder="Password">
+        <input type="password" class="form-control" placeholder="Password" ng-model='$ctrl.rq.password'>
         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
-        <input type="password" class="form-control" placeholder="Retype password">
+        <input type="password" class="form-control" placeholder="Retype password" ng-model='$ctrl.rq.password2'>
         <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
       </div>
       <div class="row">
@@ -32,7 +32,7 @@
         </div>
         <!-- /.col -->
         <div class="col-xs-4">
-          <button type="submit" class="btn btn-primary btn-block btn-flat">Register</button>
+          <button ng-click='$ctrl.send_eUSER_CREATE()' type="submit" class="btn btn-primary btn-block btn-flat">Register</button>
         </div>
         <!-- /.col -->
       </div>
@@ -46,6 +46,6 @@
         Google+</a>
     </div>
 -->
-    <a ng-click="$ctrl.showPage('window-login')" class="text-center">I already have a membership</a>
+    <a ng-click="$ctrl.g_G.routeGoto('/login')" class="text-center">I already have a membership</a>
   </div>
 </div>
